tests/baselines/reference/additionOperatorWithInvalidOperands.errors.txt
==== tests/cases/compiler/additionOperatorWithInvalidOperands.ts (19 errors) ====
    function foo() { }
    class C {
        public a: string;
        static foo() { }
    }
    enum E { a, b, c }
    module M { export var a }
    
    var a: boolean;
    var b: number;
    var c: Object;
    var d: Number;
    
    // boolean + every type except any and string
    var r1 = a + a;
             ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r2 = a + b;
             ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r3 = a + c;
             ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    
    // number + every type except any and string
    var r4 = b + a;
             ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r5 = b + b; // number + number is valid
    var r6 = b + c;
             ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    
    // object + every type except any and string
    var r7 = c + a;
             ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r8 = c + b;
             ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r9 = c + c;
             ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    
    // other cases
    var r10 = a + true;
              ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r11 = true + false;
              ~~~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r12 = true + 123;
              ~~~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r13 = {} + {};
              ~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r14 = b + d;
              ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r15 = b + foo;
              ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r16 = b + foo();
              ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r17 = b + C;
              ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r18 = E.a + new C();
              ~~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r19 = E.a + C.foo();
              ~~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r20 = E.a + M;
              ~~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.